# da-lab

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  aics-da.cabal  bias.sh  model_bias_sample.json  replica_mean_sample.json  run_sample.json  sample_setting.json  stack.yaml  wercker.yml
DA/: ensemble.py  lyapunov.py  misc.py
app/: Main.hs
benches/: l63.rs
python/: .gitignore  aics_da.py  gaussian.ipynb  non_gaussian.ipynb  requirements.txt  setup.py  various_ng.ipynb
python/DA/: ensemble.py  linalg.py  lyapunov.py  test_lyapunov.py
python/aics_da/: ETKF.py  __init__.py  ensemble.py  io.py  lyapunov.py  sqlite.py
python/scripts/: catmsg
rust/: Cargo.toml  bias.sh  bias_en_mean.sh  bias_fix_obs.sh  bias_long.sh  bias_obs_mean.sh  ensemble.sql.template  init.sql  obs_mean.sh  run.sh  run.zsh  run_enkf.zsh  run_etkf.zsh  run_mpf.zsh  sample_setting.json  timeseries.sql.template
rust/benches/: l63.rs
rust/src/: analysis.rs  bias_collect.rs  da.rs  einsum.rs  enkf.rs  ensemble.rs  etkf.rs  io.rs  l63.rs  lib.rs  linalg.rs  lyapunov.rs  main.rs  mpf.rs  observation.rs  settings.rs  sql.rs  stat.rs  types.rs  weight.rs
rust/src/sqlite/: da.rs  ensemble.rs  ensemble_series.rs  ensemble_ts.rs  init.sql  mod.rs  stat.rs  storage.rs  timeseries.rs  util.rs
rust/tests/: lyapunov.rs  mpf.rs  sqlite.rs  weight.rs
src/: bias.rs  bias_correct.rs  da.rs  einsum.rs  enkf.rs  ensemble.rs  etkf.rs  exec.rs  io.rs  l63.rs  lib.rs  linalg.rs  lyapunov.rs  main.rs  model.rs  mpf.rs  observation.rs  settings.rs  stat.rs  types.rs  weight.rs
src/method/: enkf.rs  etkf.rs  mod.rs  mpf.rs
src/task/: mod.rs  model_bias.rs  replica_mean.rs  run.rs
tests/: lyapunov.rs  mpf.rs  weight.rs
