[package]
name = "aics-da"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
rmp = "*"
serde_derive = "*"
rustc-serialize = "*"
rmp-serialize = "*"
rand = "*"
ndarray = { version = "0.9", features = ["blas", "rustc-serialize"] }
ndarray-linalg = "0.5"
ndarray-odeint = "0.5"
itertools = "*"
pbr = "*"
float-cmp = "*"
num-traits = "*"
derive-new = "*"
env_logger = "*"
dotenv = "*"
clap = { version = "2", features = ["yaml"] }
