[package]
name = "da-lab"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
num-traits = "*"
rand = "*"
ndarray = { version = "0.9", features = ["blas", "serde"] }
ndarray-linalg = "0.5.4"
ndarray-odeint = "0.6.1"
float-cmp = "*"

derive-new = "*"

serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rmp = "*"
rmp-serde = "0.12"

nix = "*"
log = "*"
time = "*"
env_logger = "*"
dotenv = "*"
clap = { version = "2", features = ["yaml"] }
uuid = { version = "0.4", features = ["v4"] }
