name:                aics-da
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/termoshtt/aics-da#readme
license:             GPL-3
license-file:        LICENSE
author:              Toshiki Teramura
maintainer:          toshiki.teramura@gmail.com
copyright:           2016 Toshiki Teramura
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, repa-odeint, repa
  default-language:    Haskell2010

executable aics-da-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, aics-da
  default-language:    Haskell2010
