[package]
name = "aics-da"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
rmp = "*"
rustc-serialize = "*"
rmp-serialize = "*"
rand = "*"
ndarray-rand = "*"
ndarray-linalg = "0.1.6"
ndarray-odeint = "0.1"
itertools = "*"
docopt = "*"
pbr = "*"
rusqlite = "*"
time = "*"
float-cmp = "*"
num-traits = "*"

[dependencies.ndarray]
version = "0.7.3"
default-features = false
features = ["blas", "rustc-serialize"]

[dev-dependencies]
ndarray-numtest = "0.1.2"
