[package]
name = "aics-da"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
rmp = "*"
rustc-serialize = "*"
rmp-serialize = "*"
rand = "*"
ndarray-rand = "0.3"
ndarray-linalg = "0.2"
ndarray-odeint = "0.1"
itertools = "*"
docopt = "*"
pbr = "*"
float-cmp = "*"
num-traits = "*"
derive-new = "*"

[dependencies.ndarray]
version = "0.7"
default-features = false
features = ["blas", "rustc-serialize"]

[dev-dependencies]
ndarray-numtest = "0.1.2"
